--- a/websocketDemo/websocketVueCliDemo/package.json
+++ b/websocketDemo/websocketVueCliDemo/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "vue": "^2.3.3",
     "vue-router": "^2.6.0",
-    "ws": "^3.1.0"
+    "vue-websocket": "^0.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
